# attitudeControl

./: PWMController.py  README.md  RotationMatrixToQuaternion_website.txt  TestClientPython.py  arduinoControl.py  attitudeControl.ui  customViconFNs.py  dataStreamSDKDocumentation_copy.py  flightControlObject.py  flightObject.py  flightObjectGrapher.py  initialize.py  main.py  main_testArduinoComs.py  main_testHVandArduino.py  main_viconGraphing.py  outputData.csv  ui_test.py  write_csv.py  write_csv_FakeDataForGraphingTests.py
3d models/: HV_Supply_Fixture.SLDPRT  HV_Supply_Fixture.STL  HV_Supply_FixtureArm.SLDPRT  HV_Supply_FixtureArm.STL  HV_supply_Fixture_assembly.SLDASM  RobotPlayground_Base.stl  RobotPlayground_playground_withRodMounts v10.SLDPRT  RobotPlayground_playground_withRodMounts v10.STL  robotStop.stl  tubeCap.stl  z_constraint_cap.stl  z_constraint_mount.stl  z_constraint_stand.stl
ArduinoControl_Will/: ArduinoControl_Will.ino
Circuit Analysis/: HV_Circuit_Calculations.m  pwStep.m
HV Integration Work/: HVTesting_Will.py
PWMControl/: PWMControl.ino
Rebecca Work/GUI_eSL/: pyproject.toml.properties  pyproject.toml.py  setup.cfg  setup.py
Rebecca Work/GUI_eSL/src/GUI_eSL/: GUI_supporting_functions.py  HVTesting_Will.py  How to Connect and Control HV Supply with Python.docx  ScopeWidget.py  SensorProcessing.py  SpellmanHvSupply.py  StageWidget.py  device_definitions.py  eSL_GUI.py  indicatorLight.py  oscilloscope.py  xystage.py
Tests for Hardware and Communciation/: arduinoSerialComm.py  main_testHvRelays.py  main_testPython2ArduinoComs.py  (+1 more)
(+17 files in other folders)
