[metadata]
# Configure specific project settings
name = ll4ma_opt
version = 0.0.1
author = Rebecca Miles
author_email = rebecca.miles@utah.edu
description = Gui for Spellman High Voltage eSL supply
url = https://github.com/Remiles45/SensorGUI.git
license = MIT

# Configure general project settings
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Scientific/Engineering :: Robotics
    License :: OSI Approved :: MIT License

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
[options]
install_requires =
    setuptools_scm>=6.2
    numpy
    matplotlib


zip_safe = False
packages = find:
package_dir =
    =src

include_package_data = True
python_requires = >=3.6